Too many improvements to vm solving, and generation, to bother listing

--- a/minion/build_constraints/CT_VM_SYM.tmpl
+++ b/minion/build_constraints/CT_VM_SYM.tmpl
@@ -10,6 +10,6 @@
 template <typename T>
 AbstractConstraint*
 BuildCT_VM_SYM(StateObj* stateObj,const T& t1, ConstraintBlob& b)
-{ return VMSymCon(stateObj, t1, b.tuples); }
+{ return VMSymCon(stateObj, t1, b.tuples, b.tuples2); }
 
 BUILD_CT(CT_VM_SYM, 1)
