--- a/minion/build_constraints/CT_VM.tmpl
+++ b/minion/build_constraints/CT_VM.tmpl
@@ -10,6 +10,6 @@
 template <typename T>
 AbstractConstraint*
 BuildCT_VM(StateObj* stateObj,const T& t1, ConstraintBlob& b)
-{ return VMCon(stateObj, t1, b.tuples); }
+{ return VMCon(stateObj, t1, b.tuples, b.tuples2); }
 
 BUILD_CT(CT_VM, 1)
