Big int -> SysInt move, and remove runtime_val

--- a/minion/build_constraints/CT_LEQ_OCCURRENCE.tmpl
+++ b/minion/build_constraints/CT_LEQ_OCCURRENCE.tmpl
@@ -13,7 +13,7 @@ BuildCT_LEQ_OCCURRENCE(StateObj* stateObj, const T1& t1, ConstraintBlob& b)
 {
   const SysInt val_to_count = checked_cast<SysInt>(b.constants[0][0]);
   DomainInt occs = b.constants[1][0];
-  return ConstantOccEqualCon(stateObj, t1, runtime_val(val_to_count), 0, occs);
+  return ConstantOccEqualCon(stateObj, t1, val_to_count, 0, occs);
 }
 
 BUILD_CT(CT_LEQ_OCCURRENCE, 1)
