--- a/minion/build_constraints/CT_WATCHED_GEQSUM.tmpl
+++ b/minion/build_constraints/CT_WATCHED_GEQSUM.tmpl
@@ -41,7 +41,7 @@ inline AbstractConstraint*
     else
 #endif
     {
-      return BoolGreaterEqualSumConDynamic(stateObj, t1, runtime_val(sum)); 
+      return BoolGreaterEqualSumConDynamic(stateObj, t1, sum); 
     }
 
 }
