--- a/minion/build_constraints/CT_INEQ.tmpl
+++ b/minion/build_constraints/CT_INEQ.tmpl
@@ -10,6 +10,6 @@
 template<typename T1, typename T2>
 AbstractConstraint*
 BuildCT_INEQ(StateObj* stateObj, const T1& t1, const T2& t2, ConstraintBlob& b) 
-{ return LeqCon(stateObj, t1[0], t2[0], runtime_val(b.constants[0][0])); }
+{ return LeqCon(stateObj, t1[0], t2[0], b.constants[0][0]); }
 
 BUILD_CT(CT_INEQ, 2)
