--- a/minion/build_constraints/CT_OCCURRENCE.tmpl
+++ b/minion/build_constraints/CT_OCCURRENCE.tmpl
@@ -12,7 +12,7 @@ AbstractConstraint*
 BuildCT_OCCURRENCE(StateObj* stateObj, const T1& t1, const T3& t3, ConstraintBlob& b)
 {
   const SysInt val_to_count = checked_cast<SysInt>(b.constants[0][0]);
-  return OccEqualCon(stateObj, t1, runtime_val(val_to_count), t3[0]);
+  return OccEqualCon(stateObj, t1, val_to_count, t3[0]);
 }
 
 BUILD_CT(CT_OCCURRENCE, 2)
