--- a/minion/build_constraints/CT_WATCHED_LEQSUM.tmpl
+++ b/minion/build_constraints/CT_WATCHED_LEQSUM.tmpl
@@ -17,7 +17,7 @@ inline AbstractConstraint*
       FAIL_EXIT("watched leqsum only works on Boolean variables!");
   }
 
-  return BoolLessEqualSumConDynamic(stateObj, t1, runtime_val(checked_cast<SysInt>(b.constants[0][0])));
+  return BoolLessEqualSumConDynamic(stateObj, t1, checked_cast<SysInt>(b.constants[0][0]));
 }
 
 BUILD_CT(CT_WATCHED_LEQSUM, 1)
