--- a/minion/build_constraints/CT_WEIGHTGEQSUM.tmpl
+++ b/minion/build_constraints/CT_WEIGHTGEQSUM.tmpl
@@ -28,7 +28,7 @@ BuildCT_GEQSUM(StateObj* stateObj, const vector<VarArray>& _var_array, const vec
 inline AbstractConstraint*
 BuildCT_GEQSUM(StateObj* stateObj, const vector<BoolVarRef>& var_array, const vector<ConstantVar>& var_sum, ConstraintBlob&)
 { 
-  runtime_val t2(checked_cast<SysInt>(var_sum[0].getAssignedValue()));
+  SysInt t2(checked_cast<SysInt>(var_sum[0].getAssignedValue()));
   return BoolGreaterEqualSumCon(stateObj, var_array, t2);
 }
 
