--- a/minion/build_constraints/CT_DISEQ_REIFY.tmpl
+++ b/minion/build_constraints/CT_DISEQ_REIFY.tmpl
@@ -12,7 +12,12 @@ template<typename VarRef1, typename VarRef2, typename BoolVarRef>
 AbstractConstraint*
 BuildCT_DISEQ_REIFY(StateObj* stateObj, const vector<VarRef1>& var1, 
                                         const vector<VarRef2>& var2, const vector<BoolVarRef> var3, ConstraintBlob&)
-{ return new ReifiedEqualConstraint<VarRef1, VarRef2, VarNot<BoolVarRef> >
-                                   (stateObj,var1[0],var2[0], VarNotRef(var3[0])); }
+{
+    typedef typename NotType<BoolVarRef>::type NotTypedef;
+    NotTypedef v = VarNotRef(var3[0]);
+    return new ReifiedEqualConstraint<VarRef1, VarRef2, NotTypedef>
+                                   (stateObj,var1[0],var2[0], v); 
+
+}
 
 BUILD_CT(CT_DISEQ_REIFY, 3)
