--- a/minion/build_constraints/CT_DISEQ_REIFY.tmpl
+++ b/minion/build_constraints/CT_DISEQ_REIFY.tmpl
@@ -13,10 +13,8 @@ AbstractConstraint*
 BuildCT_DISEQ_REIFY(StateObj* stateObj, const vector<VarRef1>& var1, 
                                         const vector<VarRef2>& var2, const vector<BoolVarRef> var3, ConstraintBlob&)
 {
-    typedef typename NotType<BoolVarRef>::type NotTypedef;
-    NotTypedef v = VarNotRef(var3[0]);
-    return new ReifiedEqualConstraint<VarRef1, VarRef2, NotTypedef>
-                                   (stateObj,var1[0],var2[0], v); 
+    return new ReifiedEqualConstraint<VarRef1, VarRef2, BoolVarRef, true>
+                                   (stateObj,var1[0],var2[0], var3[0]); 
 
 }
 
