Improve div and modulo, make them faster, support negative numbers properly

--- a/minion/build_constraints/CT_MODULO.tmpl
+++ b/minion/build_constraints/CT_MODULO.tmpl
@@ -6,6 +6,7 @@
 */
 
 #include "../constraints/constraint_modulo.h"
+#include "../constraints/constraint_checkassign.h"
 
 template<typename V1, typename V2>
 inline AbstractConstraint*
@@ -13,8 +14,15 @@ BuildCT_MODULO(StateObj* stateObj, const V1& vars, const V2& var2, ConstraintBlo
 {
   D_ASSERT(vars.size() == 2);
   D_ASSERT(var2.size() == 1);
-  return new ModConstraint<typename V1::value_type, typename V1::value_type,
-                           typename V2::value_type>(stateObj, vars[0], vars[1], var2[0]);
+  if(vars[0].getInitialMin() < 0 || vars[1].getInitialMin() < 1 ||
+         var2[0].getInitialMin() < 0)
+  {
+    typedef SlowModConstraint<typename V1::value_type, typename V1::value_type, typename V2::value_type> ModCon;
+    return new CheckAssignConstraint<ModCon, false>(stateObj, ModCon(vars[0], vars[1], var2[0]));
+  }
+  else
+    return new ModConstraint<typename V1::value_type, typename V1::value_type,
+                             typename V2::value_type>(stateObj, vars[0], vars[1], var2[0]);
 }
 
 BUILD_CT(CT_MODULO, 2)
